--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ google-api-core==1.34.1
 google-auth==2.32.0
 google-cloud-dialogflow==2.30.1
 googleapis-common-protos==1.63.2
+google-auth-oauthlib==1.2.1
+google-auth-httplib2==0.2.0
 Flask==3.0.2
 gunicorn==20.1.0
